[package]
name = "prak-cmc-sem03"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "up01-1"
path = "src/bin/up01/up01-1.rs"

[[bin]]
name = "up01-2"
path = "src/bin/up01/up01-2.rs"

[[bin]]
name = "up01-3"
path = "src/bin/up01/up01-3.rs"

[[bin]]
name = "up01-5"
path = "src/bin/up01/up01-5.rs"

[[bin]]
name = "up03-2"
path = "src/bin/up03/up03-2.rs"

[[bin]]
name = "up03-3"
path = "src/bin/up03/up03-3.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
